...
            app:srcCompat="@drawable/ic_play_arrow_black_24dp"
            android:tint="@color/colourSleepAccent"
            android:backgroundTint="@color/colourSleepDark"
            tools:ignore="UnusedAttribute" />

        <ImageButton
            android:id="@+id/stop_button"
            android:contentDescription="@string/stop_button_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_stop_black_24dp"
            android:tint="@color/colourSleepAccent"
            android:backgroundTint="@color/colourSleepDark"
            tools:ignore="UnusedAttribute" />

        <ImageButton
            android:id="@+id/loop_button"
            android:contentDescription="@string/loop_button_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_loop_black_24dp"
            android:tint="@color/colourSleepAccent"
            android:backgroundTint="@color/colourSleepDark"
...
